fix content hidden behind footer

--- a/client/components/App.css
+++ b/client/components/App.css
@@ -52,4 +52,6 @@ li {
 
 .section {
   width: 85%;
+  height: fit-content;
+  margin-bottom: 50px;
 }
